[gd_scene load_steps=6 format=3 uid="uid://bj6r2imiwgiys"]

[ext_resource type="Script" path="res://src/ChangingElements/Scripts/button.gd" id="1_b8fj0"]
[ext_resource type="Texture2D" uid="uid://cu60kkiqvvi2p" path="res://Assets/ChangingElements/Button.png" id="1_u00o6"]
[ext_resource type="AudioStream" uid="uid://csrt1nodqt67x" path="res://Assets/Sounds/Sfx/random.wav" id="3_jjija"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yvbsu"]
size = Vector2(4, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l4rvn"]
size = Vector2(8, 2)

[node name="button" type="Area2D"]
collision_mask = 3
script = ExtResource("1_b8fj0")

[node name="audio_stream_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jjija")

[node name="sprite_2d" type="Sprite2D" parent="."]
texture = ExtResource("1_u00o6")
hframes = 2

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_yvbsu")

[node name="static_body_2d" type="StaticBody2D" parent="."]
collision_mask = 11

[node name="collision_shape_2d" type="CollisionShape2D" parent="static_body_2d"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_l4rvn")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
